@@ -2,6 +2,6 @@ include examples/*.py
 include doc/*
 include doc/doc_include/*.txt
 include doc/extensions/*.py
-include README.md
+include README.rst
 include tests/data/*.zip
 include tests/*.py
