@@ -2,7 +2,7 @@
 # -*- coding: utf-8 -*-
 """ Tests backpropagation algorithm
 """
-from __future__ import division, print_function
+from __future__ import division, print_function, unicode_literals
 
 import numpy as np
 import os
